fixed image overflowing

--- a/src/components/ScenePanel.css
+++ b/src/components/ScenePanel.css
@@ -5,7 +5,9 @@
 #scene > div > div > img {
     position: absolute;
     /* TODO: these need to be adjusted once we've fixed the image sizes */
-    left: 0;
-    bottom: -42px;
+    left: 3px;
+    bottom: 8px;
     width: 380px;
+    max-height: 500px;
+    overflow: hidden;
 }
